--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+/vendor
+/node_modules
+/storage/*.index
+/public/storage
+/tests/report
+
+Thumbs.db
+Homestead.yaml
+Homestead.json
+phpunit.xml
+
+.env
+.idea
+.project
+.DS_Store
+npm-debug.log
+*.cache
+prefill.php
 *.log
